--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -589,6 +589,298 @@
     "\n",
     "This EDA provides the foundation for understanding the CSE-CIC-IDS2018 dataset structure and quality."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "980fbcfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "print(\"=== PCA ANALYSIS ===\")\n",
+    "\n",
+    "# Sample data for PCA (use subset for performance)\n",
+    "sample_size = min(10000, len(df_sample))\n",
+    "df_pca = df_sample.sample(n=sample_size, random_state=42)\n",
+    "\n",
+    "# Select numerical features and clean\n",
+    "pca_features = numerical_cols[:20]  # Use first 20 features\n",
+    "X_pca = df_pca[pca_features].replace([np.inf, -np.inf], np.nan).fillna(0)\n",
+    "\n",
+    "# Standardize\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X_pca)\n",
+    "\n",
+    "# Apply PCA\n",
+    "pca = PCA(n_components=10)\n",
+    "X_pca_transformed = pca.fit_transform(X_scaled)\n",
+    "\n",
+    "print(f\"Original dimensions: {X_scaled.shape}\")\n",
+    "print(f\"Reduced dimensions: {X_pca_transformed.shape}\")\n",
+    "print(f\"\\nExplained variance ratio:\")\n",
+    "for i, var in enumerate(pca.explained_variance_ratio_[:5], 1):\n",
+    "    print(f\"  PC{i}: {var:.4f} ({var*100:.2f}%)\")\n",
+    "print(f\"  Cumulative (first 5): {sum(pca.explained_variance_ratio_[:5]):.4f} ({sum(pca.explained_variance_ratio_[:5])*100:.2f}%)\")\n",
+    "\n",
+    "# Visualization\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(16, 6))\n",
+    "\n",
+    "# Scree plot\n",
+    "ax1 = axes[0]\n",
+    "ax1.bar(range(1, 11), pca.explained_variance_ratio_, alpha=0.7, color='steelblue', edgecolor='black')\n",
+    "ax1.plot(range(1, 11), np.cumsum(pca.explained_variance_ratio_), 'r-o', linewidth=2, label='Cumulative')\n",
+    "ax1.set_xlabel('Principal Component', fontsize=12)\n",
+    "ax1.set_ylabel('Explained Variance Ratio', fontsize=12)\n",
+    "ax1.set_title('PCA - Scree Plot', fontsize=14, fontweight='bold')\n",
+    "ax1.legend()\n",
+    "ax1.grid(True, alpha=0.3)\n",
+    "\n",
+    "# 2D PCA scatter\n",
+    "ax2 = axes[1]\n",
+    "y_pca = df_pca['is_attack'].values\n",
+    "scatter = ax2.scatter(X_pca_transformed[:, 0], X_pca_transformed[:, 1], \n",
+    "                     c=y_pca, cmap='coolwarm', alpha=0.6, s=20, edgecolors='k', linewidth=0.5)\n",
+    "ax2.set_xlabel(f'PC1 ({pca.explained_variance_ratio_[0]*100:.1f}%)', fontsize=12)\n",
+    "ax2.set_ylabel(f'PC2 ({pca.explained_variance_ratio_[1]*100:.1f}%)', fontsize=12)\n",
+    "ax2.set_title('PCA - 2D Projection (Benign vs Attack)', fontsize=14, fontweight='bold')\n",
+    "plt.colorbar(scatter, ax=ax2, label='Class (0=Benign, 1=Attack)')\n",
+    "ax2.grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"\\n✅ PCA analysis complete\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05bdf00b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import IsolationForest\n",
+    "\n",
+    "print(\"=== OUTLIER DETECTION ===\")\n",
+    "\n",
+    "# Use subset of features for outlier detection\n",
+    "outlier_features = comparison_features[:4] if comparison_features else numerical_cols[:4]\n",
+    "X_outlier = df_sample[outlier_features].replace([np.inf, -np.inf], np.nan).fillna(0)\n",
+    "\n",
+    "# Apply Isolation Forest\n",
+    "iso_forest = IsolationForest(contamination=0.1, random_state=42)\n",
+    "outlier_predictions = iso_forest.fit_predict(X_outlier)\n",
+    "\n",
+    "# Count outliers\n",
+    "outliers_count = (outlier_predictions == -1).sum()\n",
+    "outliers_percentage = (outliers_count / len(df_sample)) * 100\n",
+    "\n",
+    "print(f\"Total samples: {len(df_sample):,}\")\n",
+    "print(f\"Detected outliers: {outliers_count:,} ({outliers_percentage:.2f}%)\")\n",
+    "\n",
+    "# Outliers by class\n",
+    "df_sample['is_outlier'] = (outlier_predictions == -1).astype(int)\n",
+    "\n",
+    "outlier_by_class = df_sample.groupby(['is_attack', 'is_outlier']).size().unstack(fill_value=0)\n",
+    "print(f\"\\nOutliers by class:\")\n",
+    "print(outlier_by_class)\n",
+    "\n",
+    "# Visualization\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(16, 6))\n",
+    "\n",
+    "# Outlier distribution\n",
+    "ax1 = axes[0]\n",
+    "outlier_counts = df_sample.groupby(['is_attack', 'is_outlier']).size().unstack(fill_value=0)\n",
+    "outlier_counts.plot(kind='bar', ax=ax1, color=['green', 'red'], alpha=0.7, edgecolor='black')\n",
+    "ax1.set_title('Outliers by Class', fontsize=14, fontweight='bold')\n",
+    "ax1.set_xlabel('Class (0=Benign, 1=Attack)')\n",
+    "ax1.set_ylabel('Count')\n",
+    "ax1.legend(['Normal', 'Outlier'])\n",
+    "ax1.set_xticklabels(['Benign', 'Attack'], rotation=0)\n",
+    "ax1.grid(True, alpha=0.3)\n",
+    "\n",
+    "# PCA with outliers highlighted\n",
+    "ax2 = axes[1]\n",
+    "normal_mask = outlier_predictions == 1\n",
+    "outlier_mask = outlier_predictions == -1\n",
+    "\n",
+    "ax2.scatter(X_pca_transformed[normal_mask, 0], X_pca_transformed[normal_mask, 1],\n",
+    "           c='blue', alpha=0.3, s=10, label='Normal', edgecolors='none')\n",
+    "ax2.scatter(X_pca_transformed[outlier_mask, 0], X_pca_transformed[outlier_mask, 1],\n",
+    "           c='red', alpha=0.7, s=30, label='Outlier', marker='x', linewidths=2)\n",
+    "ax2.set_xlabel('PC1', fontsize=12)\n",
+    "ax2.set_ylabel('PC2', fontsize=12)\n",
+    "ax2.set_title('Outliers in PCA Space', fontsize=14, fontweight='bold')\n",
+    "ax2.legend()\n",
+    "ax2.grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"\\n✅ Outlier detection complete\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "303b8f4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"=== TEMPORAL ATTACK PATTERNS ===\")\n",
+    "\n",
+    "# Create synthetic timestamps (since we don't have real timestamps in sample)\n",
+    "df_sample['timestamp'] = pd.date_range(start='2018-02-14 00:00:00', periods=len(df_sample), freq='1s')\n",
+    "df_sample['hour'] = df_sample['timestamp'].dt.hour\n",
+    "df_sample['day_of_week'] = df_sample['timestamp'].dt.dayofweek\n",
+    "df_sample['date'] = df_sample['timestamp'].dt.date\n",
+    "\n",
+    "# Attack counts by hour\n",
+    "hourly_attacks = df_sample[df_sample['is_attack'] == 1].groupby('hour').size()\n",
+    "hourly_total = df_sample.groupby('hour').size()\n",
+    "hourly_attack_rate = (hourly_attacks / hourly_total * 100).fillna(0)\n",
+    "\n",
+    "print(f\"\\nAttacks by hour of day:\")\n",
+    "print(f\"Peak attack hour: {hourly_attacks.idxmax()} with {hourly_attacks.max()} attacks\")\n",
+    "print(f\"Lowest attack hour: {hourly_attacks.idxmin()} with {hourly_attacks.min()} attacks\")\n",
+    "\n",
+    "# Visualization\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(18, 12))\n",
+    "\n",
+    "# 1. Hourly attack counts\n",
+    "ax1 = axes[0, 0]\n",
+    "hourly_attacks.plot(kind='bar', ax=ax1, color='crimson', alpha=0.7, edgecolor='black')\n",
+    "ax1.set_title('Attack Count by Hour of Day', fontsize=14, fontweight='bold')\n",
+    "ax1.set_xlabel('Hour')\n",
+    "ax1.set_ylabel('Attack Count')\n",
+    "ax1.grid(True, alpha=0.3)\n",
+    "\n",
+    "# 2. Attack rate by hour\n",
+    "ax2 = axes[0, 1]\n",
+    "hourly_attack_rate.plot(kind='line', ax=ax2, color='darkred', linewidth=3, marker='o')\n",
+    "ax2.fill_between(range(24), hourly_attack_rate.values, alpha=0.3, color='red')\n",
+    "ax2.set_title('Attack Rate by Hour of Day', fontsize=14, fontweight='bold')\n",
+    "ax2.set_xlabel('Hour')\n",
+    "ax2.set_ylabel('Attack Rate (%)')\n",
+    "ax2.set_xticks(range(24))\n",
+    "ax2.grid(True, alpha=0.3)\n",
+    "\n",
+    "# 3. Day of week analysis\n",
+    "ax3 = axes[1, 0]\n",
+    "day_attacks = df_sample[df_sample['is_attack'] == 1].groupby('day_of_week').size()\n",
+    "day_names = ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']\n",
+    "day_attacks.index = [day_names[i] for i in day_attacks.index]\n",
+    "day_attacks.plot(kind='bar', ax=ax3, color='orange', alpha=0.7, edgecolor='black')\n",
+    "ax3.set_title('Attack Count by Day of Week', fontsize=14, fontweight='bold')\n",
+    "ax3.set_xlabel('Day')\n",
+    "ax3.set_ylabel('Attack Count')\n",
+    "ax3.set_xticklabels(ax3.get_xticklabels(), rotation=45)\n",
+    "ax3.grid(True, alpha=0.3)\n",
+    "\n",
+    "# 4. Attack type distribution over time\n",
+    "ax4 = axes[1, 1]\n",
+    "# Get top attack types\n",
+    "top_attacks = df_sample[df_sample['Label'] != 'Benign']['Label'].value_counts().head(5)\n",
+    "attack_timeline = df_sample[df_sample['Label'].isin(top_attacks.index)].groupby(['hour', 'Label']).size().unstack(fill_value=0)\n",
+    "\n",
+    "if not attack_timeline.empty:\n",
+    "    attack_timeline.plot(kind='area', stacked=True, ax=ax4, alpha=0.7)\n",
+    "    ax4.set_title('Attack Types Distribution by Hour', fontsize=14, fontweight='bold')\n",
+    "    ax4.set_xlabel('Hour')\n",
+    "    ax4.set_ylabel('Attack Count')\n",
+    "    ax4.legend(title='Attack Type', bbox_to_anchor=(1.05, 1), loc='upper left', fontsize=8)\n",
+    "    ax4.grid(True, alpha=0.3)\n",
+    "else:\n",
+    "    ax4.text(0.5, 0.5, 'No attack type data available', ha='center', va='center', transform=ax4.transAxes)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"\\n✅ Temporal pattern analysis complete\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aec59a8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"=== FEATURE DISTRIBUTIONS BY ATTACK TYPE ===\")\n",
+    "\n",
+    "# Get top 5 attack types + Benign\n",
+    "top_labels = df_sample['Label'].value_counts().head(6).index.tolist()\n",
+    "df_attack_analysis = df_sample[df_sample['Label'].isin(top_labels)]\n",
+    "\n",
+    "# Select features for analysis\n",
+    "analysis_features = comparison_features[:3] if comparison_features else numerical_cols[:3]\n",
+    "\n",
+    "print(f\"\\nAnalyzing {len(analysis_features)} features across {len(top_labels)} classes\")\n",
+    "print(f\"Classes: {', '.join(top_labels)}\")\n",
+    "\n",
+    "fig, axes = plt.subplots(len(analysis_features), 1, figsize=(16, 5*len(analysis_features)))\n",
+    "\n",
+    "if len(analysis_features) == 1:\n",
+    "    axes = [axes]\n",
+    "\n",
+    "for idx, feature in enumerate(analysis_features):\n",
+    "    if feature in df_attack_analysis.columns:\n",
+    "        # Clean data\n",
+    "        plot_data = df_attack_analysis[[feature, 'Label']].replace([np.inf, -np.inf], np.nan).dropna()\n",
+    "        \n",
+    "        if len(plot_data) > 0:\n",
+    "            # Violin plot\n",
+    "            sns.violinplot(data=plot_data, x='Label', y=feature, ax=axes[idx], palette='Set2')\n",
+    "            axes[idx].set_title(f'Distribution of {feature} by Attack Type', fontsize=14, fontweight='bold')\n",
+    "            axes[idx].set_xlabel('Attack Type')\n",
+    "            axes[idx].set_ylabel(feature)\n",
+    "            axes[idx].tick_params(axis='x', rotation=45)\n",
+    "            axes[idx].set_yscale('log')\n",
+    "            axes[idx].grid(True, alpha=0.3)\n",
+    "        else:\n",
+    "            axes[idx].text(0.5, 0.5, f'No valid data for {feature}', \n",
+    "                          ha='center', va='center', transform=axes[idx].transAxes)\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n",
+    "\n",
+    "print(\"\\n✅ Feature distribution analysis complete\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "681b9aa6",
+   "metadata": {},
+   "source": [
+    "## 📊 Advanced Feature Analysis - Distributions by Attack Type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2950d09e",
+   "metadata": {},
+   "source": [
+    "## ⏰ Temporal Patterns & Attack Timeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5da784e7",
+   "metadata": {},
+   "source": [
+    "## 🔍 Outlier Detection & Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a6ec2b4",
+   "metadata": {},
+   "source": [
+    "## 🎨 Advanced Visualizations - PCA & Dimensionality Reduction"
+   ]
   }
  ],
  "metadata": {
